# django-jsonrpc

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml  single_file_asgi.py
.github/workflows/: checks.yml
django_jsonrpc/controller/: __init__.py  _base.py  _route.py  decor.py
django_jsonrpc/controller/openrpc/: _openrpc.py
django_jsonrpc/controller/openrpc/collectors/: __init__.py  _main_collector.py  _method_collector.py
django_jsonrpc/core/: models.py
django_jsonrpc/logic/: dispatcher.py  responser.py  validator.py
django_jsonrpc/management/commands/: generate_openrpc.py
django_jsonrpc/openrpc/builder/: builder.py
django_jsonrpc/openrpc/document/: _base.py  _openrpc_document.py
django_jsonrpc/openrpc/document/common/: __init__.py  _descriptor.py  _error.py  _example.py  _link.py  _link_server.py  _pairing_object.py  _reference.py  _schema.py  _tag.py
django_jsonrpc/openrpc/document/components/: __init__.py  _components.py
django_jsonrpc/openrpc/document/external_docs/: __init__.py  (+1 more)
django_jsonrpc/openrpc/tests/: conftest.py  test_builder.py  test_components.py  test_external_doc.py  test_openrcp_info.py  test_openrcp_method.py  test_server.py
django_jsonrpc/templates/: openrpc_docs.html
docs/: mkdocs.yml
docs/docs/: create_method.md  custom_error.md  include_controller.md  index.md  openrpc.md  streaming.md
jsonrpc_framework/: __init__.py
jsonrpc_framework/controller/: _base.py  _route.py
jsonrpc_framework/controller/openrpc/: _openrpc.py
jsonrpc_framework/core/: __init__.py  error.py  models.py
jsonrpc_framework/logic/: __init__.py  dispatcher.py  responser.py  validator.py
jsonrpc_framework/management/commands/: generate_openrpc.py
jsonrpc_framework/openrpc/builder/: builder.py
jsonrpc_framework/openrpc/document/: _openrpc_document.py
jsonrpc_framework/openrpc/tests/: conftest.py  test_builder.py  test_components.py  test_external_doc.py  test_openrcp_info.py  test_openrcp_method.py  test_server.py
tests/integration/: conftest.py  test_batch.py  test_requests.py  urls.py
tests/smoke/: test_import.py
tests/unit/: conftest.py  test_base_controller.py  test_dispathcer.py  test_responserr.py  test_route_controller.py  test_validator.py
(+40 files in other folders)
