[project]
name = "django-jsonrpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.13"

dependencies = [
    "django>=6.0.5",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.5",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pymdown-extensions>=10.21.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
show_error_codes = true
files = ["django_jsonrpc"]
exclude = ["^docs/", "^tests/"]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main", "pydantic.mypy"]

[tool.django-stubs]
django_settings_module = "single_file_asgi"
