[project]
name = "django-jsonrpc-framework"
version = "0.1.0"
description = "Django jsonrpc implementation"
readme = "README.md"
requires-python = ">=3.13"

classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: Django",
]

dependencies = [
    "django>=6.0.5",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.5",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pymdown-extensions>=10.21.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
show_error_codes = true
files = ["django_jsonrpc"]
exclude = ["^docs/", "^tests/"]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main", "pydantic.mypy"]

[tool.django-stubs]
django_settings_module = "single_file_asgi"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["jsonrpc_framework"]

[tool.hatch.build.targets.sdist]
include = [
  "jsonrpc_framework/**",
  "README.md",
  "pyproject.toml",
]